hyades/k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-clusterissuer
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - echo.hyades.cloud
      secretName: tls-secret-echo
  rules:
  - host: echo.hyades.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
